[gd_scene load_steps=3 format=3 uid="uid://05d610tqnml2"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_foif8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcvp2"]
bg_color = Color(0, 0, 0, 0.392157)

[node name="SettingsMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_foif8")

[node name="BackgroundOverlay" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dcvp2")

[node name="MenuOverlay" type="Panel" parent="BackgroundOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -250.0
offset_right = 262.5
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BackgroundOverlay/MenuOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundOverlay/MenuOverlay/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
focus_neighbor_top = NodePath("../../HBoxContainer/SaveButton")
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
focus_neighbor_top = NodePath("../MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../SFXVolumeSlider")
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXVolumeLabel" type="Label" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
focus_neighbor_top = NodePath("../MusicVolumeSlider")
focus_neighbor_bottom = NodePath("../FullscreenCheckbox")
max_value = 1.0
step = 0.05
value = 1.0

[node name="FullscreenLabel" type="Label" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_top = NodePath("../SFXVolumeSlider")
focus_neighbor_bottom = NodePath("../ResolutionDropdown")

[node name="ResolutionLabel" type="Label" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionDropdown" type="OptionButton" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../FullscreenCheckbox")
focus_neighbor_bottom = NodePath("../../HBoxContainer/SaveButton")
selected = 0
item_count = 2
popup/item_0/text = "1280x720"
popup/item_1/text = "1920x1080"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="CloseButton" type="Button" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="SaveButton" type="Button" parent="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../CloseButton")
focus_neighbor_top = NodePath("../../GridContainer/ResolutionDropdown")
focus_neighbor_bottom = NodePath("../../GridContainer/MasterVolumeSlider")
text = "Save	"

[connection signal="value_changed" from="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="item_selected" from="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/GridContainer/ResolutionDropdown" to="." method="_on_resolution_dropdown_item_selected"]
[connection signal="pressed" from="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="BackgroundOverlay/MenuOverlay/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
